initial user module; added deps; unit test for POST /api/user/<name>
- swagger: fix post user definition
- swagger: fix field names in responses to PascalCase
- there is no basic auth in .net core. Must use
https://github.com/bruno-garcia/Bazinga.AspNetCore.Authentication.Basic
