# src/BranchOfficeBackend/WebModel/UserCreatedResponse.cs
@@ -1,0 +1,10 @@
+namespace BranchOfficeBackend
+{
+    public class UserCreatedResponse {
+        public UserCreatedResponse() {}
+
+        public string Type {get; set; }
+        public string Message {get;set;}
+        public string Password {get;set; }
+    }
+}
