# swagger-branch-office.yaml
@@ -267,28 +267,6 @@ paths:
           description: "Employee not found"
       security:
         - branch_office_auth: []
-  /api/user:
-    post:
-      tags:
-      - "user"
-      summary: "Creates a new user"
-      description: "Creates a new user"
-      operationId: "createUser"
-      produces:
-      - "application/json"
-      parameters:
-      - in: "path"
-        name: "username"
-        description: "Username must be an employee Email"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "successful operation"
-        404:
-          description: "Employee with a particular email not found"
-        405:
-          description: "User already with a particular login already exists"
   /api/user/login:
     get:
       tags:
@@ -343,6 +321,29 @@ paths:
       security:
         - branch_office_auth: []
   /api/user/{username}:
+    post:
+      tags:
+      - "user"
+      summary: "Creates a new user"
+      description: "Creates a new user"
+      operationId: "createUser"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        name: "username"
+        description: "Username must be an employee Email"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/UserCreatedResponse"
+        404:
+          description: "Employee with a particular email not found"
+        409:
+          description: "User already with a particular login already exists"
     put:
       tags:
       - "user"
@@ -405,27 +406,27 @@ definitions:
   Employee:
     type: "object"
     properties:
-      id:
+      Id:
         type: "integer"
         format: "int64"
         default: 1
-      name:
+      Name:
         type: "string"
         example: "Jan Kowalski"
-      email:
+      Email:
         type: "string"
         example: "kowalski@gmail.com"
-      isManager:
+      IsManager:
         type: "boolean"
         default: false
   EmployeeHours:
     type: "object"
     properties:
-      id:
+      Id:
         type: "integer"
         format: "int64"
         default: 1
-      value:
+      Value:
         type: "number"
         format: "float"
         default: 8
@@ -440,11 +441,11 @@ definitions:
   Salary:
     type: "object"
     properties:
-      id:
+      Id:
         type: "integer"
         format: "int64"
         default: 1
-      value:
+      Value:
         type: "number"
         format: "float"
         default: 1000
@@ -459,24 +460,21 @@ definitions:
   UserCreatedResponse:
     type: "object"
     properties:
-      code:
-        type: "integer"
-        format: "int64"
-      type:
+      Type:
         type: "string"
-      message:
+      Message:
         type: "string"
-      password:
+      Password:
         type: "string"
   ApiResponse:
     type: "object"
     properties:
-      code:
+      Code:
         type: "integer"
         format: "int64"
-      type:
+      Type:
         type: "string"
-      message:
+      Message:
         type: "string"
 externalDocs:
   description: "Find out more about the project"
